src/components/CameraInterface/CameraInterface.scss
.camera-interface {
  text-align: center;

  &__footer {
    position: fixed;
    z-index: 10;
    bottom: 30px;
    width: 100%;
    text-align: center;
  }

  /*
    !important required due to
    Shortcoming of react-camera that is using height: 100% without any override
  */
  video {
    width: auto !important;
    height: 100vh !important;
  }
}

